--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-statemachine",
   "version": "0.1.0",
-  "description": "",
+  "description": "A simple state machine refers to a programming concept where an application or workflow is divided into a series of states or steps, and the program progresses from one state to the next based on certain conditions or triggers",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "n8n",
+    "statemachine",
+    "state"
   ],
-  "license": "MIT",
-  "homepage": "",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/pigri/n8n-nodes-statemachine",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "David Papp",
+    "email": "david+oss@papp.ai"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/pigri/n8n-nodes-statemachine.git"
   },
   "main": "index.js",
   "scripts": {
@@ -29,17 +32,15 @@
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
-    "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
-    ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/StateMachine/Statemachine.node.js"
     ]
   },
+  "dependencies": {
+    "redis": "^3.1.1"
+  },
   "devDependencies": {
-    "@types/express": "^4.17.6",
+    "@types/redis": "^2.8.11",
     "@types/request-promise-native": "~1.0.15",
     "@typescript-eslint/parser": "~5.45",
     "eslint-plugin-n8n-nodes-base": "^1.11.0",
